hphp/hack/test/typecheck/integrate_if3.php.exp
File "integrate_if3.php", line 25, characters 7-8:
Invalid argument (Typing[4110])
File "integrate_if3.php", line 12, characters 12-14:
Expected int
File "integrate_if3.php", line 18, characters 12-16:
But got bool
